test/e2e/testdata/load_balancing_client_side_weighted_round_robin.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-cswrr
  namespace: gateway-conformance-infra
spec:
  selector:
    app: lb-backend-cswrr
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-cswrr
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend-cswrr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lb-backend-cswrr
  template:
    metadata:
      labels:
        app: lb-backend-cswrr
    spec:
      containers:
      - name: backend
        image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
        imagePullPolicy: IfNotPresent
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: lb-backend-cswrr
        resources:
          requests:
            cpu: 10m
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: client-side-wrr-lb-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: client-side-wrr-lb-route
  loadBalancer:
    type: ClientSideWeightedRoundRobin
    clientSideWeightedRoundRobin:
      blackoutPeriod: 30s
      weightExpirationPeriod: 60s
      weightUpdatePeriod: 10s
      metricNamesForComputingUtilization:
      - "named_metric.foo"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-side-wrr-lb-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cswrr
    backendRefs:
    - name: lb-backend-cswrr
      port: 8080
